@@ -2,29 +2,28 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
 class NotificationServiceTest {
 
 
-    private NotificationServiceEmail notificationService = new NotificationServiceEmail();
+    private final NotificationServiceEmail notificationService = new NotificationServiceEmail();
 
     @Test
     @DisplayName("GIVEN jon's birthday WHEN send THEN correct email has been sent")
     void test_send_01() {
         String firstName = "John";
         String email = "john.doe@foobar.com";
-        List<BirthdayEmail> expectedSentEmails = Arrays.asList(new BirthdayEmail(email, "Happy Birthday!", "Happy birthday, dear " + firstName + "!"));
-        List<BirthdayDto> birthdayDtoList = Arrays.asList(new BirthdayDto("Doe", firstName, LocalDate.of(1982, 10, 8), email));
+        List<BirthdayEmail> expectedSentEmails = List.of(new BirthdayEmail(email, "Happy Birthday!", "Happy birthday, dear " + firstName + "!"));
+        List<BirthdayDto> birthdayDtoList = List.of(new BirthdayDto("Doe", firstName, LocalDate.of(1982, 10, 8), email));
 
         boolean success = notificationService.send(birthdayDtoList);
 
-        assertEquals(true, success);
+        assertTrue(success);
         assertEquals(expectedSentEmails, notificationService.getSentEmails());
     }
 
